namespaces/live.cloud-platform.service.justice.gov.uk/cica-experian-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "cica-experian-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "CICA"
    cloud-platform.justice.gov.uk/slack-channel: "cica-digital-unit"
    cloud-platform.justice.gov.uk/application: "CICA Experian Bank Wizard"
    cloud-platform.justice.gov.uk/owner: "CICA Digital: infrastructure@cica.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cica-experian-bank-wizard"
    cloud-platform.justice.gov.uk/team-name: "cica-ebw"
    cloud-platform.justice.gov.uk/review-after: ""
